--- a/notebook1.ipynb
+++ b/notebook1.ipynb
@@ -117,18 +117,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "aead3217-7b5e-4508-8cbe-97fee0175626",
+   "execution_count": null,
+   "id": "8d893529-05fa-4a63-9926-f7ed48c448db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None 100 10.3 False Harry Potter\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# variables (Datatypes)\n",
     "file = None\n",
@@ -138,6 +130,106 @@
     "student_name : str = \"Harry Potter\"\n",
     "print(file, number, sales_tax, fake_news, name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0bf5e71-6a57-4c89-aa0f-ff302d4470a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Variables can also be collections like tuple, list or dictionary type\n",
+    "primary_numbers : tuple =(2,3,5,7,11,13,17,19)\n",
+    "favorite_fruits : tuple = (\"banana\", \"guava\", \"apple\", \"blueberry\", \"strawberry\")\n",
+    "even_numbers : list = [2,4,6,8,10,12,14,16,18,20]\n",
+    "student_record : list = [\"Vick Vu\", \"Python\", \"3.5\"]\n",
+    "student_data:dict = {\"FirstName\" : \"Vick\" , \"LastName\":\"Vu\", \"CourseName\" : \"Python\", \"GPA\" : 3.5}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c9cf7864-8b8d-43bd-9a3e-ad4317d40ea4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# variables (Collections Datatypes)\n",
+    "even_numbers : tuple = (2,4,6,8,10)\n",
+    "favorite_food : list = [\"Matki Poha\" , \"Samosa\", \"Pattice\", \"Sabudana Wada\", \"Cheese Uttapa\", \"Onion Uttapa\", \"Mysore Masala Dosa\"]\n",
+    "faculty_data : dict = {\"Name\" : \"Elizabeth Zott\" , \"Subject\" : \"Chemistry\" ,\"GPA\" : 3.9, \"Specialization\" : \"Organic Chemistry\"}\n",
+    "print(type(even_numbers))\n",
+    "print(type(favorite_food))\n",
+    "print(type(faculty_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "268c2ec5-4723-4d94-99c8-3e9322f864df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 12, 3.14, None, True)\n",
+      "[2, 3, 4, 5, 7, 11, 13, 20.2, None, False, 'All is well!', ('apple', 12, 3.14, None, True)]\n",
+      "[100, 'Rucha', [2, 3, 4, 5, 7, 11, 13, 20.2, None, False, 'All is well!', ('apple', 12, 3.14, None, True)]]\n",
+      "[[2, 3, 4, 5, 7, 11, 13, 20.2, None, False, 'All is well!', ('apple', 12, 3.14, None, True)], [100, 'Rucha', [2, 3, 4, 5, 7, 11, 13, 20.2, None, False, 'All is well!', ('apple', 12, 3.14, None, True)]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tuples, Lists can hold mixed types of data\n",
+    "mix_tuple : tuple = (\"apple\", 12, 3.14, None, True)\n",
+    "print(mix_tuple)\n",
+    "mix_list: list = [2,3,4,5,7,11,13,20.2, None, False, \"All is well!\", mix_tuple] # A list can contain a tuple\n",
+    "print(mix_list)\n",
+    "mix_list_2 : list = [100,\"Rucha\", mix_list] # A list can contain another list\n",
+    "print(mix_list_2)\n",
+    "two_mix_lists : list = [mix_list, mix_list_2] #A list can contain two or more lists\n",
+    "print(two_mix_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dc85b1e9-bea8-44d1-8972-0a7e9eac30f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Name': 'Sue Jones', 'GPA': 3.4}, {'Name': 'Trick Too', 'GPA': 3.1}, {'Name': 'Jelly Bell', 'GPA': 3.2}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "student_data_1: dict = {\"Name\" : \"Sue Jones\", \"GPA\" : 3.4}\n",
+    "student_data_2: dict = {\"Name\" : \"Trick Too\", \"GPA\" : 3.1}\n",
+    "student_data_3: dict = {\"Name\" : \"Jelly Bell\", \"GPA\" : 3.2}\n",
+    "student_datas = [student_data_1, student_data_2, student_data_3] # A list can contain multiple dictionary data\n",
+    "print(student_datas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "145ef3d8-f8ad-4143-aac6-a0cf015ed004",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
